# nix-language-server

./: Cargo.toml  did_open.sh  foo.nix  initialize.sh  initialized.sh  shell.nix  shutdown.sh
nix-errors/: Cargo.toml
nix-errors/src/: lib.rs
nix-lexer/: Cargo.toml
nix-lexer/benches/: lexer.rs
nix-lexer/examples/: tokenize.rs
nix-lexer/src/: lib.rs  split.rs  tokens.rs  unescape.rs
nix-lexer/tests/: literals.nix  literals.snap  operators.nix  punctuation.nix  snapshots.rs  trivia.nix
nix-parser/: Cargo.toml  example.nix  foo.nix  grammar.abnf
nix-parser/benches/: example.rs
nix-parser/examples/: viewer.rs
nix-parser/src/: ast.rs  error.rs  grammar.abnf  lexer.rs  lib.rs  parser.rs
nix-parser/src/ast/: fmt.rs  macros.rs  tokens.rs
nix-parser/src/error/: expected_found.rs  incorrect_delim.rs  unclosed_delim.rs  unexpected.rs
nix-parser/src/lexer/: lexers.rs  parsers.rs  tokens.rs  util.rs
nix-parser/src/lexer/lexers/: number.rs  path.rs  string.rs  uri.rs
nix-parser/src/lexer/parsers/: number.rs  path.rs  string.rs  uri.rs
nix-parser/src/parser/: error.rs  expr.rs  partial.rs  tests.rs  tokens.rs
nix-parser/src/parser/error/: close_delim.rs  expected_found.rs
nix-parser/src/parser/expr/: app.rs  atomic.rs  attr.rs  bind.rs  func.rs  membership.rs  stmt.rs  util.rs
nix-parser/src/parser/tokens/: keywords.rs  literal.rs  ops.rs  strings.rs
nix-parser/src/parser/tokens/literal/: number.rs  path.rs
nix-parser/src/parser_old/: error.rs  expr.rs
nix-parser/src/parser_old/error/: expected_found.rs
nix-parser/src/parser_old/tokens/: keywords.rs  literal.rs
nix-parser/src/parser_old/tokens/literal/: number.rs
nix-parser2/: Cargo.toml
nix-parser2/benches/: lexer.rs
nix-parser2/examples/: lexer.rs
nix-parser2/src/: ast.rs  cst.rs  error.rs  lexer.rs  lib.rs
nix-parser2/src/lexer/: split.rs  tokens.rs  unescape.rs
nix-parser2/tests/lexer/: literals.json  mod.rs  operators.json  operators.snap  punctuation.json  punctuation.snap  trivia.json  trivia.snap
src/: backend.rs  initialized.sh  lib.rs  main.rs  parser.rs  protocol.rs  rpc.rs  server.rs
src/backend/: ast.rs  config.rs  repl.rs
src/server/: codec.rs  delegate.rs  service.rs  stdio.rs
tower-lsp/: Cargo.toml
tower-lsp/examples/: server.rs
tower-lsp/src/: codec.rs  delegate.rs  lib.rs  service.rs  stdio.rs
