[package]
name = "nix-language-server"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
codespan = "0.4.1"
codespan-lsp = "0.4.1"
env_logger = "0.6.2"
futures = "0.1.28"
jsonrpc-core = "13.1"
log = "0.4.7"
nix-parser = { version = "0.1.0", path = "./nix-parser" }
serde_json = "1.0.40"
structopt = "0.2.18"
tokio = "0.1.22"
tower-lsp = "0.3.1"

[workspace]
members = ["nix-parser"]
