[package]
name = "nix-language-server"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
codespan = "0.7.0"
codespan-lsp = "0.7.0"
env_logger = "0.6.2"
futures = "0.1.28"
jsonrpc-core = "14.0.5"
log = "0.4.7"
nix-parser = { version = "0.1.0", path = "./nix-parser" }
serde_json = "1.0.40"
structopt = "0.2.18"
tokio = "0.1.22"
tower-lsp = "0.6.0"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["nix-parser"]
