[package]
name = "nix-language-server"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
codespan = "0.8"
codespan-lsp = "0.8"
env_logger = "0.7"
jsonrpc-core = "14.0"
log = "0.4"
nix-parser = { version = "0.1.0", path = "./nix-parser" }
nix-parser2 = { version = "0.1.0", path = "./nix-parser2", default-features = false }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tower-lsp = "0.9.0"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["nix-parser", "nix-parser2"]
