[package]
name = "nix-parser"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
codespan = "0.4.1"
codespan-reporting = "0.4.1"
float-cmp = "0.5.2"
nom = "5.0.1"
nom_locate = "1.0.0"
once_cell = "1.1.0"
url = "2.1.0"

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "perf"]
