[package]
name = "nix-parser"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
codespan = "0.8.0"
codespan-reporting = "0.8.0"
lexical-core = "0.6.2"
nom_locate = "1.0.0"
once_cell = "1.1.0"
smallvec = "0.6.12"
url = "2.1.0"

[dependencies.nom]
version = "5.0.1"
default-features = false
features = ["std"]

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "perf"]

[dev-dependencies]
criterion = "0.3.0"
structopt = "0.3.3"

[[bench]]
name = "example"
harness = false
