[package]
name = "nix-parser2"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[features]
default = []
serialization = ["codespan/serialization", "nix-lexer/serialization"]

[dependencies]
codespan = "0.9.1"
codespan-lsp = "0.9"
codespan-reporting = "0.9"
lsp-types = "0.73"
nix-lexer = { path = "../nix-lexer" }
smallvec = "1.2"
smol_str = "0.1"
url = "2.1"
