[package]
name = "nix-parser2"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[features]
default = []
serialization = ["codespan/serialization", "nix-lexer/serialization"]

[dependencies]
codespan = "0.9.3"
codespan-lsp = "0.9.3"
codespan-reporting = "0.9.3"
lsp-types = "0.74"
nix-errors = { path = "../nix-errors" }
nix-lexer = { path = "../nix-lexer" }
rowan = "0.9"
smallvec = "0.6"
smol_str = "0.1"
url = "2.1"
