[package]
name = "tower-lsp"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = "0.1.28"
jsonrpc-core = "13.1"
jsonrpc-derive = "13.1"
log = "0.4.7"
lsp-types = "0.60.0"
nom = "5.0.1"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
tokio = "0.1.22"
tower = "0.1.1"
